tokio console for async profiling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 bytes = "1.3"  # for shared byte slices
+console-subscriber = "0.1"  # async code profiling
 dashmap = "5.4"  # for shared hashmaps
 docopt = "1.1"  # for commandline argument parsing
 env_logger = "0.10"
@@ -17,7 +18,8 @@ reqwest = "0.11"
 log = "0.4"
 rustls = {version ="0.20", features= ["logging"] }  # for TLS handling
 rustls-pemfile = "1.0"  # for reading server certificate
-tokio = { version = "1.24", features= ["rt-multi-thread", "net", "macros", "sync", "fs", "io-util"]}  # async runtime
+tokio = { version = "1.24", features= ["rt-multi-thread", "net", "macros", "sync", "fs", "io-util", "tracing"]}  # async runtime
 tokio-rustls = "0.23"  # for using rustls in tokio runtime
 thiserror = "1.0"  # for pretty error types :)
+tracing = "0.1"
 serde = { version = "1.0", features = ["derive"] }  # for deserializing commandline arguments
